@@ -1,5 +1,12 @@
 2018-11-02  Tom Tromey  <tom@tromey.com>
 
+	* aarch64-tdep.c (stack_item_t): Remove typedef and DEF_VEC.
+	(struct aarch64_call_info): Add initializers.
+	<si>: Now a std::vector.
+	(pass_on_stack, aarch64_push_dummy_call): Update.
+
+2018-11-02  Tom Tromey  <tom@tromey.com>
+
 	* remote.c (remote_g_packet_guess_s): Remove typedef and DEF_VEC.
 	(struct remote_g_packet_data): Derive from allocate_on_obstack.
 	<guesses>: Now a std::vector.
